--- a/css/styles.css
+++ b/css/styles.css
@@ -114,18 +114,16 @@ address {
 .current {
   color: var(--focus-color);
 }
-.current::after{
+.current::after {
   content: "";
   display: block;
   width: 100%;
   height: 4px;
-  background: #2196F3;
+  background: #2196f3;
   border-radius: 2px;
   position: absolute;
   bottom: 0;
-  
 }
-
 
 .link:hover,
 .link:focus {
@@ -370,22 +368,22 @@ address {
   position: relative;
 }
 
-.work-description{
+.work-description {
   display: flex;
   width: 100%;
   height: 70px;
   font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-text-align: center;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color:var(--hero-color);
-background-color: rgba(47, 48, 58, 0.8);
-justify-content: center;
-align-items: center;
-position: absolute;
-bottom: 0;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  background-color: rgba(47, 48, 58, 0.8);
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
 }
 
 /*-------------- team-------------- */
@@ -401,7 +399,7 @@ bottom: 0;
 .team {
   display: flex;
   gap: 30px;
-    /* border-radius: 0px 0px 4px 4px; */
+  /* border-radius: 0px 0px 4px 4px; */
 }
 
 .team-item {
@@ -625,19 +623,92 @@ row-gap: 90px;
 .footer-soc-link:focus .footer-soc-icon {
   fill: var(--body-background-color);
 }
+
+.subscribe {
+  margin-left: 93px;
+}
+
+.subscribe-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--hero-color);
+  margin-bottom: 20px;
+}
+
+.subscribe-wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.subscribe-input {
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+}
+
+.subscribe-input::placeholder {
+  font-size: 16px;
+  line-height: 1.25px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-label {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+}
+
+.subscribe-button {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding: 10px 28px;
+  min-width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background: var(--focus-color);
+  border: none;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  color: var(--filter-battons-color);
+  margin-left: 12px;
+  position: relative;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-icon {
+  position: absolute;
+  right: 28px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: var(--filter-battons-color);
+}
+
 /*--------------- Modal--------------- */
 
-.backdrop{
+.backdrop {
   position: fixed;
-  top:0;
+
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms var(--time-duration),
-  visibility 250ms var(--time-duration);
+    visibility 250ms var(--time-duration);
 }
 
-.modal{
+.modal {
+  padding: 40px;
   width: 528px;
   min-height: 581px;
   background-color: var(--body-background-color);
@@ -648,12 +719,11 @@ row-gap: 90px;
   transition: transform 250ms var(--time-duration);
 }
 
-.backdrop.is-hidden .modal{
+.backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scaleY(0) rotate(0deg);
-  
 }
 
-.modal-close{
+.modal-close {
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -666,14 +736,151 @@ row-gap: 90px;
   top: 8px;
   right: 8px;
   padding: 0;
+  transition: fill 250ms var(--time-duration);
 }
 
-.is-hidden{
+.modal-close:focus,
+.modal-close:hover {
+  fill: var(--focus-color);
+}
+
+.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
 }
 
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  color: var(--link-color);
+  text-align: center;
+}
+
+.modal-form {
+  margin-top: 30px;
+}
+
+.modal-fill {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 36px;
+  transition: border 250ms var(--time-duration);
+}
+
+.modal-input:focus {
+  border: 1px solid var(--focus-color);
+}
+
+.modal-lable {
+  display: block;
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  left: 0;
+  bottom: 0;
+}
+
+.modal-wrap {
+  position: relative;
+}
+
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms var(--time-duration);
+}
+
+.modal-input:focus ~ .modal-icon {
+  fill: var(--focus-color);
+}
+
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+}
+
+.modal-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.check {
+  margin-bottom: 30px;
+}
+
+.check-link {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--focus-color);
+  transition: color 250ms var(--time-duration);
+  padding-left: 2px;
+}
+
+.check-link:hover,
+.check-link:focus {
+  color: var(--focus-color);
+}
+
+.check-text {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+  display: flex;
+  align-items: center;
+}
+
+.check-text span {
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--link-color);
+  border-radius: 2px;
+  margin-right: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: transparent;
+}
+
+.modal-check:checked + .check-text span {
+  background-color: var(--focus-color);
+  border: none;
+  fill: var(--filter-battons-color);
+}
+
+.modal-submit {
+  min-width: 200px;
+  height: 50px;
+  display: block;
+  margin: 0 auto;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: var(--filter-battons-color);
+  border: none;
+}
 /*------------- portfolio------------- */
 /* .main {
   margin-bottom: 94px;
@@ -779,34 +986,34 @@ img {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.examples-link-wrapper{
+.examples-link-wrapper {
   position: relative;
   overflow: hidden;
 }
-.examples-link-owerlay{
+.examples-link-owerlay {
   background-color: rgba(33, 150, 243, 0.9);
   width: 100%;
   height: 100%;
   position: absolute;
   top: 0;
- 
+
   /* display: flex;
   justify-content: center;
   align-items: center; */
   transform: translateY(100%);
   transition: transform 250ms var(--time-duration);
 }
-.owerlay-text{
+.owerlay-text {
   font-size: 18px;
-line-height: 1.55;
-letter-spacing: 0.03em;
-color: var(--hero-color);
-text-align: center;
-padding: 63px 24px;
-overflow: auto;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  color: var(--hero-color);
+  text-align: center;
+  padding: 63px 24px;
+  overflow: auto;
 }
 
-.examples-link:hover .examples-link-owerlay{
+.examples-link:hover .examples-link-owerlay {
   transform: translateY(0);
 }
 
