--- a/css/styles.css
+++ b/css/styles.css
@@ -625,7 +625,7 @@ row-gap: 90px;
 }
 
 .subscribe {
-  margin-left: 93px;
+  margin-left: auto;
 }
 
 .subscribe-text {
@@ -638,11 +638,18 @@ row-gap: 90px;
   margin-bottom: 20px;
 }
 
-.subscribe-wrap {
+/* .subscribe-wrap {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
+} */
+.subscribe-form{
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
 }
 
 .subscribe-input {
@@ -652,6 +659,7 @@ row-gap: 90px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
+  color: #ffffff;
 }
 
 .subscribe-input::placeholder {
@@ -680,6 +688,7 @@ row-gap: 90px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 0.06em;
   color: var(--filter-battons-color);
   margin-left: 12px;
   position: relative;
@@ -754,6 +763,7 @@ row-gap: 90px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
+  letter-spacing: 0.03em;
   color: var(--link-color);
   text-align: center;
 }
@@ -794,6 +804,7 @@ row-gap: 90px;
 
 .modal-wrap {
   position: relative;
+  margin-bottom: 20px;
 }
 
 .modal-icon {
@@ -850,6 +861,7 @@ row-gap: 90px;
   color: var(--primary-text-color);
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .check-text span {
@@ -871,6 +883,10 @@ row-gap: 90px;
 }
 
 .modal-submit {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
   min-width: 200px;
   height: 50px;
   display: block;
